# noborder-yolo

./: .gitignore  .gitmodules  README.md  config.json  pyproject.toml
notes/:  basic_integration.ipynb  analyze_per_object.ipynb  analyze_per_object.py  analyze_problem.ipynb  divide_trainval_by_density.py  draw_dataset_stats.ipynb  generate_groups.ipynb  generate_groups.py
notes/aggregate/baseline/: dense.ipynb  sparse.ipynb
notes/aggregate/baseline_box/: dense.ipynb  sparse.ipynb
notes/aggregate/best/: dense.ipynb  sparse.ipynb
notes/aggregate/best_box/: dense.ipynb  sparse.ipynb
notes/aggregate/confidence/: dense.ipynb  gt_matches.npy  pred_matches.npy
notes/aggregate/finale/: box_dense_gridsearch.py  box_gridsearch.ipynb  box_trainval_gridsearch.py  mask_dense_gridsearch.py  mask_gridsearch.ipynb  mask_nms_gridsearch.py  mask_softnms_gridsearch.py  (+5 more)
notes/analyze_per_object/: dense.ipynb  sparse.ipynb  test.ipynb
notes/analyze_problem/: dense.ipynb  sparse.ipynb  test.ipynb
notes/extract_group_features/: dense.ipynb  trainval.ipynb  trainval.py
notes/extract_group_images/: dense.ipynb  sparse.ipynb  trainval.ipynb
results/: box_dense_gridsearch.py  box_sparse_gridsearch.py  box_union_gridsearch.ipynb  grid_search_results.yaml  mask_dense_gridsearch.py
src/: grouping.py  metrics.py  utils.py
src/aggregate/: base.py  confidence.py  merge.py  model.py  noborder.py  threshold.py
src/convlstm/: data.py  example.yaml  loss.py  model.py  train.py
train/: baseline.yaml  detect_baseline.yaml  finetune.yaml  noborder.yaml  pretrain.yaml
(+54 files in other folders)
