[tool.poetry]
name = "nobound-yolo"
version = "0.1.0"
description = "Решение проблемы краевых объектов на примере модели YOLOv8. Бакалаврская дипломная работа Кондрашова Кирилла."
authors = ["KirillPal <kirpall@ya.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
ultralytics = "8.3.48"
ipykernel = "^6.29.5"
shapely = "^2.0.7"
statsmodels = "^0.14.4"
pytorch-lightning = "^2.5.1.post0"
xgboost = "^3.0.2"
catboost = "^1.2.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
